# babel

./: .travis.yml  CMakeLists.txt  README.md  appveyor.yml  deps  deps.bat  deps.sh
babel/: CMakeLists.txt
babel/include/babel/: encoding.h  iconv.h
babel/src/: codepages.h  encoding.cpp  iconv.cpp
tests/: CMakeLists.txt
tests/src/: encoding.cpp  main.cpp
